fixed create account placeholder size on mobile

--- a/src/app/create-account/create-account.component.scss
+++ b/src/app/create-account/create-account.component.scss
@@ -216,6 +216,18 @@ section {
   }
 }
 
+@media (max-width: 400px) {
+  .section-content {
+    form {
+      .input {
+        input {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 375px) {
   .password-input {
     margin-bottom: 80px !important;
@@ -224,7 +236,7 @@ section {
     form {
       .input {
         input {
-          font-size: 14px;
+          font-size: 12px;
         }
       }
     }
